# images-converter

./: README.md
backend/: .pre-commit-config.yaml  pyproject.toml
backend/image_converter_api/: main.py
client/: package-lock.json  package.json
client/src/: App.tsx  setupProxy.js
client/src/components/ListImg/: index.tsx  style.ts
client/src/components/UploadFile/: index.tsx  style.ts
client/src/store/: index.ts
image_converter_api/: .pre-commit-config.yaml  pyproject.toml  ruff.toml
image_converter_api/src/: main.py
