[tool.poetry]
name = "image-converter-api"
version = "0.1.0"
description = ""
authors = ["Roman-AlexeevP <alexeevroma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}

[tool.poetry.group.dev.dependencies]
pyproject-pre-commit = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
